--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <!-- QUARTA FILA -->
         <div class="row">
-            <div class="col-1">1 col</div>
+            <div class="col-1"><p>1 col</p></div>
             <div class="col-2"><p>2 col</p></div>
             <div class="col-2"><p>2 col</p></div>
             <div class="col-6"><p>6 col</p></div>
@@ -45,14 +45,14 @@
         <!-- QUINTA FILA -->
         <div class="row">
             <div class="col-6">
-                <div class="col-2"><p>2 col</p></div>
-                <div class="col-2"><p>2 col</p></div>
-                <div class="col-8"><p>8 col</p></div>
+                <div class="col-2"><p>Nested 2 col</p></div>
+                <div class="col-2"><p>Nested 2 col</p></div>
+                <div class="col-8"><p>Nested 8 col</p></div>
             </div>
-            <!-- SESTA FILA -->
+
             <div class="col-6">
-                <div class="col-6"><p>6 col</p></div>
-                <div class="col-6"><p>6 col</p></div>
+                <div class="col-6"><p>Nested 6 col</p></div>
+                <div class="col-6"><p>Nested 6 col</p></div>
             </div>
         </div>
     </div>
